# gtlab-module-generator

./: .bumpversion.cfg  .bumpversion.cfg.license  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  GtModuleGenerator.pro  README.md  REUSE.toml
ci/: build-512.bat  copyExecutable.bat
features/: local_settings.pri
resources/: resources.qrc
resources/interfaces/: 0_datamodel.json  1_process.json  2_mdi.json  3_exporter.json  4_importer.json  5_init.json  6_property.json  7_network.json  8_collection.json  9_calculator_exec.json  calculator_exec.json  collection.json  datamodel.json  exporter.json  importer.json  init_module.json  mdi.json  network.json  process.json  property.json
resources/interfaces/class_definitions/: gt_abstractaccessdataconnection.json  gt_abstractcalculatorexecutor.json  gt_abstractcollectionsettings.json  gt_abstractexporter.json  gt_abstractimporter.json  gt_abstractproperty.json  gt_abstractpropertyitem.json  gt_calculator.json  gt_dockwidget.json  gt_mdiitem.json  gt_object.json  gt_object_post.json  gt_objectui.json  gt_package.json  gt_posttemplateitem.json  gt_property.json  gt_task.json
resources/interfaces/type_info/: bool.json  gt_calculatordata.json  gt_classname.json  gt_linkedclass.json  gt_metaobject.json  gt_taskdata.json  pointers.json  qdockwidgetarea.json  qicon.json  qlist.json  qmap.json  qstring.json  qstringlist.json  qvariant.json  void.json
resources/templates/: .gitignore  CHANGELOG.md  README.md  basic_derived_class.cpp  basic_derived_class.h  basic_module_class.cpp  basic_module_class.h  compat.h  deployment.pri  local_settings.pri  module.pro  module_src.pro  settings.pri  unittests.pro  unittests_main.cpp  unittests_test.cpp
resources/templates/cmake/: CMakeLists.txt
resources/templates/cmake/src/: CMakeLists.txt
resources/templates/cmake/tests/unittests/: CMakeLists.txt
resources/templates/cmake/tests/unittests/cmake/: AddGoogleTest.cmake
resources/templates/qmake/: local_settings.pri  module.pro  settings.pri
resources/templates/qmake/features/: local_settings.pri
resources/templates/qmake/src/: src.pro
resources/templates/qmake/tests/unittests/: unittests.pro
resources/templates/testing/tests/unittests/: main.cpp  test.cpp
ressources/interfaces/: calculator_exec.json  collection.json  datamodel.json  exporter.json  importer.json  init_module.json  mdi.json  network.json  process.json  property.json
ressources/templates/: basic_derived_class.cpp  basic_derived_class.h  basic_module_class.cpp  basic_module_class.h  local_settings.pri  settings.pri
src/: CMakeLists.txt  main.cpp  src.pro
src/generator/: module_generator.cpp  module_generator.h  module_generator_logger.cpp  module_generator_logger.h  module_generator_preloader.cpp  module_generator_preloader.h  module_generator_structs.cpp  module_generator_structs.h  module_generator_utils.cpp  module_generator_utils.h  preloader.cpp  preloader.h
src/generator/settings/: module_generator_settings.cpp  module_generator_settings.h
src/settings/: module_generator_settings.cpp  module_generator_settings.h
src/widgets/: dependencie_selection_widget.cpp  dependencie_selection_widget.h  dependency_selection_widget.cpp  dependency_selection_widget.h  interface_selection_widget.cpp  interface_selection_widget.h  widget_list_view.cpp  widget_list_view.h
src/widgets/class_specification/: abstract_class_specification.h  abstract_class_specification_widget.cpp  abstract_type_specification_item.cpp  abstract_type_specification_item.h  abstract_type_specifier.h  basic_type_specification_items.cpp  basic_type_specification_items.h  class_specification_item.cpp  class_specification_item.h  class_specification_list.cpp  class_specification_list.h  class_specification_widget.cpp  class_specification_widget.h  function_specification_widget.cpp  function_specification_widget.h  multiple_class_specification_widget.cpp  multiple_class_specification_widget.h  simple_class_specification_widget.cpp  simple_class_specification_widget.h  single_class_specification_widget.cpp  single_class_specification_widget.h  type_specification_widget.cpp  type_specification_widget.h
src/wizard/: abstract_wizardpage.h  dependencie_selection_page.cpp  dependencie_selection_page.h  dependency_selection_page.cpp  dependency_selection_page.h  interface_selection_page.cpp  interface_selection_page.h  interface_specifications_page.cpp  interface_specifications_page.h  intro_page.cpp  intro_page.h  module_specifications_page.cpp  module_specifications_page.h  module_wizard.cpp  module_wizard.h  settings_page.cpp  settings_page.h  signature_page.cpp  signature_page.h  summary_page.cpp  summary_page.h
src/wizard/pages/: abstract_wizardpage.h  dependency_selection_page.cpp  dependency_selection_page.h  interface_selection_page.cpp  interface_selection_page.h  interface_specifications_page.cpp  interface_specifications_page.h  intro_page.cpp  intro_page.h  module_specifications_page.cpp  module_specifications_page.h  settings_page.cpp  settings_page.h  signature_page.cpp  signature_page.h  summary_page.cpp  summary_page.h
tests/unittests/: CMakeLists.txt  main.cpp  testhelper.cpp  testhelper.h  unittests.pro
tests/unittests/test/: test.cpp
